# Connecta-App

./: .env  auth.py  database.py  db.py  execute.py  main.py  models_db.py  playground-1.mongodb.js  pyproject.toml  run.py
app/routes/: plugins.py  views.py  views_new.py
app/static/css/: add_service.css  base.css  dashboard.css  login.css  service.css  theme-dark.css  theme-light.css
app/templates/: add_service.html  base.html  calendario.html  dashboard.html  documentation.html  login.html  services.html  view_service.html
connecta_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
